# Live-NBA-Predictor

./: .env.example  .gitignore  README.md  docker-compose.yml  nba-win-probability-plan.md  pyproject.toml
src/nba_winprob/: __init__.py  cli.py  config.py  gametime.py  schemas.py
src/nba_winprob/features/: __init__.py  compute.py
src/nba_winprob/ingestion/: __init__.py  backfill.py  client.py  normalize.py
src/nba_winprob/streaming/: __init__.py  processor.py  producer.py  serde.py
tests/: conftest.py  test_config.py  test_features.py  test_gametime.py  test_normalize.py  test_processor.py  test_producer.py  test_real_payload.py  test_serde.py
