[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-winprob"
version = "0.1.0"
description = "Live NBA win probability: streaming feature pipeline, feature store, and serving"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nba_api>=1.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
nba-winprob = "nba_winprob.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nba_winprob"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
